# NEXCODE3

./: .env.example  AUDIT_PLAN.md  Dockerfile  INFRASTRUCTURE.md  Makefile  NEXUS_ROADMAP.md  README.md  app-fix1.js  apply-upgrades.js  capacitor.config.ts  clean-mock.js  fix-ai-keys.js  fix-ai-keys2.js  fix-errors.js  fix-lint.js  fix-monaco.js  fix-nav.js  fix-providers3.js  fix-purple.js  fix-rnd-again.js  fix-rnd-coords.js  fix-rnd.js  fix-ui-mobile.js  fix-ui.js  metadata.json  next.config.ts  package-lock.json  package.json  remove-keys.js  tailwind.config.mjs  update-roadmap.js  vercel.json
.api_backup/refactor/: route.ts
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
components/: DependencyGraph.tsx
components/Chat/: AiPanel.tsx
components/Dashboard/: DashboardView.tsx  DevOpsView.tsx
components/Editor/: EditorView.tsx
components/FileExplorer/: FileExplorerView.tsx
components/Git/: GitView.tsx
components/Graph/: GraphView.tsx
components/Layout/: MainHeader.tsx
components/Marketplace/: MarketplaceView.tsx
components/Navigation/: BottomTab.tsx  CommandPalette.tsx  GlobalNav.tsx
components/Preview/: PreviewView.tsx
core/: Cargo.toml
core/nexus-crypto/: Cargo.toml
core/nexus-crypto/src/: lib.rs
lib/: causal.ts  collab.ts  engine.ts  rag.ts  store.ts  telemetry.ts  utils.ts  vfs.ts
shared/: build.gradle.kts
terraform/: main.tf  variables.tf
tests/: nexus-core.test.ts
tools/: build-wasm.sh  pre-commit.sh
(+32 files in other folders)
