[package]
name = "nexus-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10"
ed25519-dalek = "2.1"
rs_merkle = "1.4"
thiserror = "1.0"
anyhow = "1.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }

